added archive btn on web admin page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<div data-no-turbolink>
+<!-- <div data-no-turbolink>
 <%#= link_to 'Undo', undo_user_users_path(:id=>params[:user_id]) unless params[:user_id].blank? %>
-</div>
+</div> -->
   <div class="panel panel-default">
 	<div class="panel-body pos-rel"> 
 		<div class="fade-bg"></div>
@@ -44,11 +44,13 @@
 		<% unless @role_id.name.eql?('Web Admin')%>
 			<%=link_to 'Remove Licenses', remove_bulk_licenses_users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs bulk-remove-license", :disabled => true %>
 			
-			<%#=link_to 'Add/Update Licenses', get_all_school_licenses_users_path(:role_id => @role_id.id, :school_id => params[:school_id]), :class=>"btn btn-success btn-xs bulk-add-update-license", :disabled => true, data: { toggle: "modal", target: "#add_update_lic", input: params[:school_id]} %>
 			<button type="button" class="btn btn-success btn-xs bulk-add-update-license" data-input="<%=params[:school_id]%>" data-target="#add_update_lic" data-toggle="modal" disabled >Add/Update Licenses</button>
 
 			<%= hidden_field_tag 'selected_user_ids[]'%>
 		<%end%>	
+		<% if  @role_id.name.eql?('Web Admin')%> 
+			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+		<%end%>
 		<% if ((can? :destroy, :users) && (can? :destroy_sa, :users)) && params[:role_id].eql?('2') %>
 			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
 		<%end%>
@@ -310,12 +312,6 @@ $(".download_sample").click(function(){
   $('.user-check-box').click(function(){
 	arr_clicked_id.push($(this).val());
   });
-
- //  $( ".bulk-remove-license" ).click(function() {
- //    jQuery.get("<%#=url_for(:controller=>'users',:action=>'remove_bulk_licenses')%>",{ bulk_remove_user_ids : arr_clicked_id, role_id:<%#=@role_id.id%>, school_id:'<%#=params[:school_id]%>'},
-	// function(data) {
-	//       });
- //  });	
   
   $( ".bulk-add-update-license" ).click(function() {
 		jQuery.get("<%=url_for(:controller=>'users',:action=>'get_all_school_licenses')%>",{ id : $(this).attr('data-input'), selected_user_ids : $('#selected_user_ids_').val(), role_id:<%=@role_id.id%>},
