--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,7 +1,7 @@
-<!-- <div data-no-turbolink class="alert-warning undo-alert">
+<div data-no-turbolink class="alert-warning undo-alert">
 <%#= link_to '<i class="fa fa-undo"></i>'.html_safe + ' Undo', undo_school_schools_path(:id=>params[:school_id]) unless params[:school_id].blank? %>
 <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
-</div> -->
+</div>
 <div class="panel panel-default">
 	<div class="panel-body"> 
 		<div class="fade-bg"></div>
@@ -18,7 +18,7 @@
 			<%=link_to 'Import School List', import_list_schools_path, :class=>"btn btn-success btn-xs"%>
 			<%#= link_to 'Un-archive', un_archive_school_list_schools_path, :class=>"btn btn-success btn-xs" %>
 			<% if can? :destroy, :schools %> 
-			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
+			<%= submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
 		 	<%end%>
 		</div>
 		<div class="loader"><%= image_tag("loader5.gif")%></div>
@@ -40,8 +40,8 @@
 	            <tbody>
 					<% @schools.try(:each) do |school| %>
 		                <tr class="odd gradeX" data-no-turbolink>
-		                  <td class=""><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
-		                  <td class=""><%= school.code %></td>
+		                  <td><%= check_box_tag 'school_ids[]', school.id, false, :class => "school-check-box" %></td>	
+		                  <td><%= school.code %></td>
 		                  <td>
 							  <div class="quick-edit" data-col="name" data-id='<%= school.id%>'><%= school.name %></div>
 							  <textarea class="invisible dynamic"></textarea>
@@ -81,10 +81,7 @@
 							    <%= link_to '<i title="Class List" class="btg btg-classroom"></i>'.html_safe, classrooms_path(:school_id=>school)%> 
 						   <%end%>
 						<% if can? :read, :licenses %> 
-						    <!-- <button class="btn btn-primary btn-xs license_details" data-toggle="modal" data-target="#school_license_details" data-input='<%#=school.id%>' >
-						    License Details
-						    </button> -->	
-							<%= link_to '<i title="License Details" class="glyphicon glyphicon-list-alt"></i>'.html_safe, '', :class=>"license_details", data: { toggle: "modal", target: "#school_license_details", input: school.id} %>
+						    <%= link_to '<i title="License Details" class="glyphicon glyphicon-list-alt"></i>'.html_safe, '', :class=>"license_details", data: { toggle: "modal", target: "#school_license_details", input: school.id} %>
 						<%end%>	
 						   </td>
 		                </tr>
