School listing issue

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -56,8 +56,8 @@
 							  <textarea class="invisible dynamic"></textarea>
 						  </td>
 						  <% @country = Carmen::Country.coded(school.country) unless school.country.blank?%>
-						  <td><%= Carmen::Country.coded(school.country).subregions.coded(school.state).try(:name) unless school.country.blank? %></td>
-						  <td><%= @country.name unless school.country.blank?%></td>
+						  <td><%= Carmen::Country.coded(school.country).subregions.coded(school.state).try(:name) unless Carmen::Country.coded(school.country).blank? unless school.country.blank? %></td>
+						  <td><%= @country.name unless @country.blank?%></td>
 						  <td>
 						  	<% if can? :update, :schools %>
 						    	<%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %>  
