removed school undo div

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,7 +1,7 @@
-<div data-no-turbolink class="alert-warning undo-alert">
+<!-- <div data-no-turbolink class="alert-warning undo-alert">
 <%#= link_to '<i class="fa fa-undo"></i>'.html_safe + ' Undo', undo_school_schools_path(:id=>params[:school_id]) unless params[:school_id].blank? %>
 <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
-</div>
+</div> -->
 <div class="panel panel-default">
 	<div class="panel-body"> 
 		<div class="fade-bg"></div>
