--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
 		<%= text_field_tag :text_field_search, '', :placeholder=>'Search text', :class=>"search-box" %>
 		<i class="glyphicon glyphicon-search btn btn-primary btn-xs search-icon-align" id="user_search" title="Search User" >	</i>
 		</div>						
-		<%= form_tag 'users/delete_user' do %>
+		<%#= form_tag 'users/delete_user' do %>
 	  <div class="index_page_btns" data-no-turbolink>
 		<% if @role_id.name.eql?('Web Admin')%>
 		    <% if can? :create, :users %>
@@ -49,16 +49,20 @@
 			<%= hidden_field_tag 'selected_user_ids[]'%>
 		<%end%>	
 		<% if  @role_id.name.eql?('Web Admin')%> 
-			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_web',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%#=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_web',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%= link_to 'Archive', delete_user_users_path(:role_id => @role_id.id),method: :post, :class=>"btn btn-success btn-xs delete-user-list", data: { confirm: 'Are you sure you want to archive selected Web Admins?' }, :disabled => true %> 
 		<%end%>
 		<% if ((can? :destroy, :users) && (can? :destroy_sa, :users)) && params[:role_id].eql?('2') %>
-			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%#=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%= link_to 'Archive', delete_user_users_path(:role_id => @role_id.id, :school_id => params[:school_id]),method: :post, :class=>"btn btn-success btn-xs delete-user-list", data: { confirm: 'Are you sure you want to archive selected School Admins?' }, :disabled => true %> 
 		<%end%>
 		<% if ((can? :destroy, :users) && (can? :destroy_teacher, :users)) && params[:role_id].eql?('3') %>
-			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%#=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%= link_to 'Archive', delete_user_users_path(:role_id => @role_id.id, :school_id => params[:school_id]),method: :post, :class=>"btn btn-success btn-xs delete-user-list", data: { confirm: 'Are you sure you want to archive selected Teachers?' }, :disabled => true %> 
 		<%end%>
 		<% if (((can? :destroy, :users) && (can? :destroy_student, :users)) || ((can? :destroy, :users) && (can? :manage_student, :users))) && params[:role_id].eql?('4') %>
-			<%=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%#=submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-user-list", :id=>'delete_user',:disabled => true, data: { confirm: 'Are you sure?' }%>
+			<%= link_to 'Archive', delete_user_users_path(:role_id => @role_id.id, :school_id => params[:school_id]),method: :post, :class=>"btn btn-success btn-xs delete-user-list", data: { confirm: 'Are you sure you want to archive selected Students?' }, :disabled => true %> 
 		<%end%>
 	</div>
 	<div class="table-responsive">
@@ -184,13 +188,13 @@
 	<div data-no-turbolink>
 		<%= paginate @users %>
 	</div>
-	<% end %>
+	<%#= end %>
  </div>		  
 </div>
 
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-width">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -204,7 +208,7 @@
 </div>		
 
 <div class="modal fade" id="add_update_lic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-width">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
