--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -8,7 +8,7 @@
 		<div class="loader"><%= image_tag("loader5.gif")%></div>
 		<%= text_field_tag :text_field_search, '', :placeholder=>'Search text', :class=>"search-box" %>
 		<i class="glyphicon glyphicon-search btn btn-primary btn-xs search-icon-align" id="school_search" title="Search School" >	</i>
-		<%= form_tag 'schools/delete_school' do %>
+		<%#= form_tag 'schools/delete_school' do %>
 		<div class="index_page_btns" data-no-turbolink>
             <% if can? :create, :schools %> 
             	<%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> 
@@ -18,7 +18,8 @@
 			<%=link_to 'Import School List', import_list_schools_path, :class=>"btn btn-success btn-xs"%>
 			<%#= link_to 'Un-archive', un_archive_school_list_schools_path, :class=>"btn btn-success btn-xs" %>
 			<% if can? :destroy, :schools %> 
-			<%= submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
+				<%#= submit_tag 'Archive', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
+				<%= link_to 'Archive', delete_school_schools_path(:archive=>true), method: :post, :class=>"btn btn-success btn-xs delete-school-list", data: { confirm: 'Are you sure you want to archive selected Schools?' }, :disabled => true %>
 		 	<%end%>
 		</div>
 		<div class="loader"><%= image_tag("loader5.gif")%></div>
@@ -63,7 +64,7 @@
 						    	<%= link_to '<i title="Edit School" class="fa fa-pencil"></i>'.html_safe, edit_school_path(school) %>  
 						    <%end%>
 					   	    <% if can? :destroy, :schools %> 
-						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: "Are you sure you want to delete #{school.name}?" } %> 
+						      <%= link_to '<i title="Archive School" class="glyphicon glyphicon-trash"></i>'.html_safe, school, method: :delete, data: { confirm: "Are you sure you want to archive school: #{school.name} ?" } %> 
 					      	<%end%>
 							<% if can? :create, :licenses %> 
 							   <%= link_to '<i title="Add License" class="btg btg-lisence"></i>'.html_safe, new_license_path(:school_id=>school)%> 
@@ -94,7 +95,7 @@
 				<%= paginate @schools %>
 			</div>
 		<% end %>	
-	<% end %>
+	<%#= end %>
 	</div>	
 </div>	  
 		  
