--- a/app/views/users/_delete_link.html.erb
+++ b/app/views/users/_delete_link.html.erb
@@ -1,1 +1,3 @@
-<%= link_to '<i title="Archive User" class="glyphicon glyphicon-trash"></i>'.html_safe, user, method: :delete, data: { confirm: 'Are you sure?' } %> 
+<%= link_to '<i title="Archive User" class="glyphicon glyphicon-trash"></i>'.html_safe, user, method: :delete, data: { confirm: "Are you sure you want to archive user: #{user.username} ?" } %> 
+
+
