changed all pop ups footer css

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -166,3 +166,5 @@ hr.school-heading-hr{margin-top: 21px;}
 .modal-dialog.modal-dialog-width{width: 500px !important}
 
 .class_licenses{width: 400px !important}
+
+.modal-footer.modal-footer-top{margin-top:0 !important;}
