reset password mail

--- a/app/views/user_mailer/password_reset_email.html.erb
+++ b/app/views/user_mailer/password_reset_email.html.erb
@@ -11,14 +11,14 @@
         <tr style="background:#1d2939;">
           <td width="30" id="header" style="padding:10px;">
             <a href="javscript:void(0);" >
-				      <%= image_tag(@user_info[:url] + "/assets/app_icon_60.png")%>
-		      	</a>
+              <%= image_tag(@user_info[:url] + "/assets/app_icon_60.png")%>
+            </a>
           </td>
           <td width="620" style="font-size:24px; font-weight:bold; text-transform:uppercase; padding:20px; text-align:left; color:#fff">Books That Grow</td>
         </tr>
         <tr class="episode">
           <td valign="top" colspan="2" style="padding:20px">
-            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Forgot password for Books That Grow.</h2>
+            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow password has been reset.</h2>
             <p style="margin:15px 0; font-size:13px">
               Hello <%= @user_info[:name] %>,
             </p>
@@ -31,12 +31,11 @@
               </p>
             </p>
             <p style="margin:0 0; font-size:13px">
-			         To reset password click on following
-			         link: <a href = '<%= @user_info[:link] %>'>reset password</a>
+               If you believe this was done in error, please immediately contact your school administrator.
             </p>
-			      <p style="margin:0 0; font-size:13px">
-			       To login to the site, just follow this link: <a href = '<%= @user_info[:url] %>'>login</a>
-			      </p>	
+            <p style="margin:0 0; font-size:13px">
+             To login to the site, just follow this link: <a href = '<%= @user_info[:url] %>'>login</a>
+            </p>  
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
             </p>
